access to unsupported internal Module added in cause of failing h5 test