@@ -232,11 +232,12 @@
                                     <Add-Opens>
                                         java.base/java.lang=ALL-UNNAMED
                                         java.base/sun.reflect.annotation=ALL-UNNAMED
-                                        java.base/jdk.internal.module=ALL-UNNAMED
+                                        java.unsupported/jdk.internal.module=ALL-UNNAMED
                                         java.base/sun.security.x509=ALL-UNNAMED
                                         java.base/java.xml=ALL-UNNAMED
                                     </Add-Opens>
                                     <Add-Exports>
+                                        java.unsupported/jdk.internal.module=ALL-UNNAMED
                                         java.base/sun.security.x509=ALL-UNNAMED
                                         java.management/sun.management=ALL-UNNAMED
                                     </Add-Exports>
@@ -409,6 +410,7 @@
 									   <jvmarg value="--add-opens=java.xml/org.w3c.dom=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.xml/javax.xml.namespace=ALL-UNNAMED" />
 									   <jvmarg value="--add-exports=java.management/sun.management=ALL-UNNAMED" />
+									   <jvmarg value="--add-exports=jdk.unsupported/jdk.internal.module=ALL-UNNAMED" />
 									<sysproperty key="app.server.running" value="true" />
 	                                <sysproperty key="app.database.internal.server.run" value="true" />
 	                                <sysproperty key="websocket.use" value="true" />
